Fix data initializer